--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Programing Hero Repo</title>
 </head>
 <body>
-  
+  <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, assumenda!</h1>
+  <h2>Lorem ipsum dolor sit amet.</h2>
+  <h3>Lorem, ipsum dolor.</h3>
 </body>
 </html>
