--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Programing Hero Repo</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, assumenda!</h1>
   <h2>Lorem ipsum dolor sit amet.</h2>
   <h3>Lorem, ipsum dolor.</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eligendi nihil similique, illum magni ducimus, repellat ullam modi et nisi voluptas reiciendis quibusdam rem dicta consequatur, earum architecto reprehenderit ipsum? Asperiores, praesentium possimus consequatur ducimus sed id cumque iure ea, est eum numquam fugiat reiciendis dolor libero exercitationem obcaecati vitae.</p>
 </body>
 </html>
