--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
     <h2>Lorem ipsum dolor sit amet, consectetur adipisicing.</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, odit? Placeat, quo? Nulla harum quaerat voluptatum ipsum officiis nobis, mollitia ex facilis praesentium accusamus odio est voluptate iusto dicta. Autem cumque similique corporis, corrupti odit doloribus ipsam neque? Mollitia laudantium minima illum sint optio accusantium ducimus consequatur adipisci ab, facere perspiciatis suscipit necessitatibus, corporis veritatis libero alias excepturi! Culpa dolorum eveniet ducimus alias quidem laborum harum necessitatibus voluptate vitae itaque!</p>
   </div>
+  <div class="blog">
+    <h3>Blog Title 1</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit porro omnis harum a obcaecati possimus tempore dolore, mollitia quasi, cupiditate non voluptatum nostrum fugit amet nobis provident voluptates saepe ipsum doloribus quos quae numquam! Similique error ipsa vitae accusamus iste quibusdam eos perspiciatis quod, exercitationem ducimus. Voluptatibus illo ipsa animi!</p>
+  </div>
+  <div class="blog">
+    <h3>Blog Title 2</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit porro omnis harum a obcaecati possimus tempore dolore, mollitia quasi, cupiditate non voluptatum nostrum fugit amet nobis provident voluptates saepe ipsum doloribus quos quae numquam! Similique error ipsa vitae accusamus iste quibusdam eos perspiciatis quod, exercitationem ducimus. Voluptatibus illo ipsa animi!</p>
+  </div>
 </body>
 </html>
